--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,8 @@
 
 	%sapper.base%
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
+	<link rel='stylesheet' href='app.css'>
+	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="favicon.png">
 	<style>
